deleted zombie code, fixed state so only allows for 5 nominations, working on css, added local storage. need to fix alert areas

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -2,3 +2,4 @@ $primary: #6f42c1;
 $light: #e9ecef;
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
