--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import url("https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Nunito&family=Open+Sans&display=swap");
 $bodyFont: "Open Sans", sans-serif;
-* {
+.app {
   background: rgb(23, 23, 22);
   color: whitesmoke;
 }
@@ -27,41 +27,4 @@ $bodyFont: "Open Sans", sans-serif;
   .modal-title {
     font-family: $bodyFont;
   }
-  //   .button-color {
-  //     background-color: silver;
-  //   }
 }
-// .first-countdown {
-//   visibility: hidden;
-// }
-
-/* .movie-app > .row {
-  overflow-x: auto;
-  flex-wrap: nowrap;
-} */
-/* .image-container {
-  position: relative;
-  transition: transform 0.2s;
-}
-
-.image-container:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-}
-
-.image-container:hover .overlay {
-  opacity: 1;
-}
-
-.overlay {
-  position: absolute;
-  background: rgba(0, 0, 0, 0.8);
-  width: 100%;
-  transition: 0.5s ease;
-  opacity: 0;
-  bottom: 0;
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
-} */
-/* ------------------------------------------------------------  */
