--- a/src/components/MovieList/movieList.scss
+++ b/src/components/MovieList/movieList.scss
@@ -5,11 +5,14 @@ $bodyFont: "Open Sans", sans-serif;
   padding: 0;
   margin: 0;
   line-height: 200%;
+  text-align: center;
+
   p {
     background: rgb(23, 23, 22);
     padding: 0;
     margin: 0;
     line-height: 200%;
+    color: whitesmoke;
   }
   .nominate {
     padding: 5px;
