--- a/src/components/Nominations/nominations.scss
+++ b/src/components/Nominations/nominations.scss
@@ -1,6 +1,15 @@
 $bodyFont: "Open Sans", sans-serif;
 
 .nomination-header {
-  font-size: 1.8vw;
+  font-size: 2vw;
   font-family: $bodyFont;
+}
+.sub-header-nom {
+  padding-top: 30px;
+  font-size: 2.2vw;
+  padding-bottom: 10px;
+  font-family: $bodyFont;
+}
+.noms-left {
+  font-size: 2.5vw;
 }
