trying to fix netlifys 401 no api-key

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ $bodyFont: "Open Sans", sans-serif;
   color: whitesmoke;
 }
 .jumbotron {
-  background-color: #bac2ee;
+  background: rgb(23, 23, 22);
   background-image: url("./Assets/filmstrip.png");
   background-size: cover;
   background-repeat: inherit;
