modifying fetch to handle user input errors

--- a/src/components/MovieList/movieList.scss
+++ b/src/components/MovieList/movieList.scss
@@ -6,6 +6,7 @@ $bodyFont: "Open Sans", sans-serif;
   margin: 0;
   line-height: 200%;
   text-align: center;
+  margin-right: 20px;
 
   p {
     background: rgb(23, 23, 22);
