--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -14,14 +14,14 @@ $bodyFont: "Open Sans", sans-serif;
     font-family: $bodyFont;
     font-weight: 500;
     font-style: normal;
-    font-size: 1.5vw;
+    font-size: 15px;
     letter-spacing: 2px;
   }
   h3 {
     text-align: center;
-    font-size: 1.5vw;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    font-size: 15px;
+    padding-top: 180px;
+    padding-bottom: 5px;
     font-family: $bodyFont;
   }
   .heart {
@@ -33,6 +33,6 @@ $bodyFont: "Open Sans", sans-serif;
 }
 .contact-link {
   text-align: center;
-  margin-top: 40px;
-  padding-bottom: 40px;
+  margin-top: 20px;
+  padding-bottom: 30px;
 }
