--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -10,10 +10,13 @@ $bodyFont: "Open Sans", sans-serif;
   font-family: $bodyFont;
 }
 .sub-header {
-  font-size: 2.2vw;
+  font-size: 2.5vw;
   padding-bottom: 30px;
   font-family: $bodyFont;
 }
 .movie-nominations {
   font-family: $bodyFont;
+}
+.results{
+    font-size: 1.8vw;
 }
