--- a/src/components/Nominations/nominations.scss
+++ b/src/components/Nominations/nominations.scss
@@ -1,15 +1,16 @@
 $bodyFont: "Open Sans", sans-serif;
 
 .nomination-header {
-  font-size: 2vw;
+  font-size: 1.6vw;
   font-family: $bodyFont;
 }
 .sub-header-nom {
-  padding-top: 30px;
-  font-size: 2.2vw;
-  padding-bottom: 10px;
+  padding: 5px;
+  font-size: 2.5vw;
+  padding-bottom: 20px;
   font-family: $bodyFont;
 }
-.noms-left {
-  font-size: 2.5vw;
+.results {
+  font-size: 1.8vw;
+  padding-bottom: 40px;
 }
