--- a/src/Reusables/buttons.scss
+++ b/src/Reusables/buttons.scss
@@ -1,6 +1,6 @@
-$bodyFont: "Open Sans", sans-serif;
+$bodyFont: "NetflixSans";
 
 .MuiButton-label {
-    color: white;
-    font-family: $bodyFont;
+  color: white;
+  font-family: $bodyFont;
 }
