--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,13 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap");
-$bodyFont: "Open Sans", sans-serif;
-
+$bodyFont: "NetflixSans";
+$bodyFontColor: whitesmoke;
 .Footer {
-  background: rgb(23, 23, 22);
-  font-family: $bodyFont;
-  color: whitesmoke;
+  background-color: #190a05;
+  color: $bodyFontColor;
+  background-image: url("../../Assets/popcorn.svg");
   a {
-    color: whitesmoke;
     text-decoration: none;
+    color: $bodyFontColor;
   }
   #site-info {
     text-align: center;
