checked for functionality and deleted zombie code

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,11 +49,7 @@ $bodyFont2: "Noto Sans", sans-serif;
   font-family: $bodyFont;
   font-family: $bodyFont2;
 }
-.film-strip {
-  height: 0px;
-  width: 0px;
-  // padding-left: 20px;
+.icons {
+  padding-right: 14px;
+  padding-top: 4px;
 }
-// .MuiSvgIcon-root .film-strip {
-//   width: 40px;
-// }
