--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,34 +1,45 @@
+$bodyFont: "Khula", sans-serif;
+$bodyFont2: "Noto Sans", sans-serif;
+
 .Footer {
   background-color: #34e89e;
-  a {
-    text-decoration: none;
-  }
-  #site-info {
-    text-align: center;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 15px;
-    letter-spacing: 2px;
-  }
-  h3 {
-    text-align: center;
-    font-size: 15px;
-    padding-top: 80px;
-    padding-bottom: 5px;
-  }
-  .heart {
-    margin: 0px 6px 0px 6px;
-  }
+  font-family: $bodyFont;
+  font-family: $bodyFont2;
 }
+a {
+  text-decoration: none;
+}
+#site-info {
+  text-align: center;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 15px;
+  letter-spacing: 2px;
+  font-family: $bodyFont;
+  font-family: $bodyFont2;
+}
+h3 {
+  text-align: center;
+  font-size: 15px;
+  padding-top: 80px;
+  padding-bottom: 5px;
+  font-family: $bodyFont;
+  font-family: $bodyFont2;
+}
+.heart {
+  margin: 0px 6px 0px 6px;
+}
+
 #icon {
   margin: 20px 10px 20px 10px;
-  color: black;
+  color: rgb(4, 0, 5);
 }
 .contact-link {
   text-align: center;
   padding-bottom: 30px;
+  color: whitesmoke;
 }
 
-.link-color {
+#link-color {
   color: whitesmoke;
 }
