updated gif on readme

--- a/src/components/MovieList/movieList.scss
+++ b/src/components/MovieList/movieList.scss
@@ -2,10 +2,9 @@ $bodyFont: "NetflixSans";
 $bodyFontColor: whitesmoke;
 
 .movie-card {
-  padding: 0;
   line-height: 200%;
   text-align: center;
-  margin-right: 10px;
+  margin: 0px 0px 10px 0px;
 
   p {
     padding: 0;
@@ -15,4 +14,7 @@ $bodyFontColor: whitesmoke;
   .nominate {
     padding: 5px;
   }
+}
+.mr-3 {
+  padding: 12px;
 }
